stateDiagram-v2
    [*] --> PLANNING

    PLANNING --> EXECUTING: tool call detected
    PLANNING --> VERIFYING: final answer, no tool call

    EXECUTING --> AWAITING_APPROVAL: risky action flagged
    EXECUTING --> PLANNING: tool result appended to context
    AWAITING_APPROVAL --> EXECUTING: approved
    AWAITING_APPROVAL --> FAILED: rejected

    VERIFYING --> PLANNING: schema/guardrail repair (retry)
    VERIFYING --> DONE: validation valid
    VERIFYING --> FAILED: retries exhausted

    PLANNING --> FAILED: max turns exceeded
    EXECUTING --> FAILED: max turns exceeded

    DONE --> [*]
    FAILED --> [*]

    note right of VERIFYING
        Self-repair loop: PLANNING to VERIFYING
        to PLANNING is the structured-output
        and guardrail retry cycle
    end note
